--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline{
         }
       stage('Checkout SCM') {
          steps{
-            git branch: 'feat', url: 'https://github.com/aawodele/project14.git'
+            git branch: 'feature/jenkinspipeline-stages', url: 'https://github.com/aawodele/project14.git'
          }
        }
       stage('Prepare Ansible For Execution') {
@@ -28,7 +28,7 @@ pipeline{
      }
       stage('Run Ansible') {
         steps {
-            ansiblePlaybook colorized: true, credentialsId: 'bastion', disableHostKeyChecking: true, installation: 'Ansible', inventory: 'inventory/${params.inventory_file}', playbook: 'playbooks/site.yml'
+            ansiblePlaybook colorized: true, credentialsId: 'Github', disableHostKeyChecking: true, installation: 'Ansible', inventory: 'inventory/${params.inventory_file}', playbook: 'playbooks/site.yml'
         }
       }
       stage('Clean Workspace after build'){
