--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -28,7 +28,8 @@ pipeline{
      }
       stage('Run Ansible') {
         steps {
-            ansiblePlaybook colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/ci', playbook: 'playbooks/site.yml'
+            ansiblePlaybook colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/${params.inventory_file}
+', playbook: 'playbooks/site.yml'
         }
       }
       stage('Clean Workspace after build'){
