--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline{
       ANSIBLE_CONFIG="${WORKSPACE}/deploy/ansible.cfg"
     }
      parameters {
-      string(name: 'inventory_file', defaultValue: 'dev',  description: 'selecting the environment')
+      string(name: 'inventory', defaultValue: 'dev',  description: 'selecting the environment')
           }
 
 
@@ -28,7 +28,7 @@ pipeline{
      }
       stage('Run Ansible') {
         steps {
-            ansiblePlaybook colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/${params.inventory_file}', playbook: 'playbooks/site.yml'
+            ansiblePlaybook colorized: true, credentialsId: 'private-key', disableHostKeyChecking: true, installation: 'ansible', inventory: 'inventory/${inventory}', playbook: 'playbooks/site.yml'
         }
       }
       stage('Clean Workspace after build'){
